--- a/rainyshiny/Base.lproj/Main.storyboard
+++ b/rainyshiny/Base.lproj/Main.storyboard
@@ -95,34 +95,41 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="kP7-er-437">
                                                     <rect key="frame" x="131" y="36" width="255" height="46.666666666666671"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="QKK-qB-IMC">
-                                                            <rect key="frame" x="0.0" y="0.0" width="152" height="46.666666666666671"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="QKK-qB-IMC">
+                                                            <rect key="frame" x="0.0" y="0.0" width="149.33333333333331" height="46.666666666666671"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wednesday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Y9-Xw-AK6">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="93.333333333333343" height="23.333333333333336"/>
-                                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wednesday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRH-Hc-KNs">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="89.666666666666657" height="20.333333333333336"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" red="0.5" green="0.44697718710000001" blue="0.47674955619999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cloudy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLk-uE-CKR">
-                                                                    <rect key="frame" x="0.0" y="23.333333333333332" width="56" height="23.333333333333339"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="56" height="26.333333333333339"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="26.329999999999998" id="oZQ-Mu-HRI"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" red="0.5" green="0.44697718710000001" blue="0.47674955619999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="TLk-uE-CKR" firstAttribute="leading" secondItem="QKK-qB-IMC" secondAttribute="leading" id="92Y-hV-c5g"/>
+                                                                <constraint firstAttribute="bottom" secondItem="TLk-uE-CKR" secondAttribute="bottom" id="m3f-wf-7Ne"/>
+                                                            </constraints>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="o7W-2b-FvJ">
-                                                            <rect key="frame" x="173" y="0.0" width="82" height="46.666666666666671"/>
+                                                            <rect key="frame" x="170.33333333333331" y="0.0" width="84.666666666666686" height="46.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27.5°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eg-8Q-f4C">
-                                                                    <rect key="frame" x="39.666666666666686" y="0.0" width="42.333333333333314" height="23.333333333333336"/>
+                                                                    <rect key="frame" x="42.333333333333371" y="0.0" width="42.333333333333314" height="23.333333333333336"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" red="0.5" green="0.44697718710000001" blue="0.47674955619999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19.1°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghg-qt-l7j">
-                                                                    <rect key="frame" x="41" y="23.333333333333332" width="41" height="23.333333333333339"/>
+                                                                    <rect key="frame" x="43.666666666666686" y="23.333333333333332" width="41" height="23.333333333333339"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" red="0.5" green="0.44697718710000001" blue="0.47674955619999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -130,6 +137,10 @@
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="QKK-qB-IMC" firstAttribute="leading" secondItem="kP7-er-437" secondAttribute="leading" id="eiM-xy-i8D"/>
+                                                        <constraint firstItem="QKK-qB-IMC" firstAttribute="top" secondItem="kP7-er-437" secondAttribute="top" id="uvc-Je-z0n"/>
+                                                    </constraints>
                                                 </stackView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e2B-4Q-8Qz">
                                                     <rect key="frame" x="31" y="18" width="80" height="80"/>
@@ -151,7 +162,7 @@
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
-                                            <outlet property="dayLbl" destination="4Y9-Xw-AK6" id="jdp-H7-oBu"/>
+                                            <outlet property="dayLbl" destination="PRH-Hc-KNs" id="QDn-Mc-Sp5"/>
                                             <outlet property="highTemp" destination="3eg-8Q-f4C" id="maU-uV-hlN"/>
                                             <outlet property="lowTemp" destination="Ghg-qt-l7j" id="cpR-qg-iL0"/>
                                             <outlet property="weatherIcon" destination="e2B-4Q-8Qz" id="hsQ-jd-CQ3"/>
